[gd_scene load_steps=2 format=3 uid="uid://cges40f7d4805"]

[ext_resource type="Script" path="res://multiplayer_menu.gd" id="1_tll3j"]

[node name="Multiplayer Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tll3j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Username"

[node name="TextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Password"

[node name="LoginBtn" type="Button" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Login"

[node name="GuestBtn" type="Button" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter as Guest"

[node name="Button" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/GuestBtn" to="." method="_on_guest_btn_pressed"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
